--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -21,7 +21,8 @@
       <ion-label position="floating">Ingresa contraseña:</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
-    <ion-button type="submit" expand="block">Entrar</ion-button>
+    
+    <ion-button type="submit" expand="block" routerLink="/tabs/tab2">Entrar</ion-button>
   </form>
   {{ auth.$usuarioActivo | async | json }}
 
