--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,19 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <div class="contenedor-imagen">
+    <img src="https://estandarlabs.gruposentte.cl/app-assets/images/fondo-azul.jpg" class="imagen-reducida" alt="Imagen">
+  </div>
+  <div class="contenedor-mapa">
+    <label>Tu Ubicación</label>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13294.214261782272!2d-70.68116115!3d-33.59093875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2scl!4v1698627467372!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
 </ion-content>
+
+
