arreglos2 en pagina home

--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -11,7 +11,7 @@
 }
 
 .contenedor-mapa {
-  margin-top: 80px;
+  margin-top: 2px;
 }
 
 .contenedor-mapa iframe {
@@ -19,7 +19,6 @@
   height: auto;
 }
 
-label {
-    position: absolute;
-    top: 240px; 
-  }
+.tolbar{
+  margin-top: 30px;
+}
