modificacion iconos en home

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -3,9 +3,9 @@
     <ion-title>
       Home
     </ion-title>
-    <ion-buttons slot="end">
-      <ion-button routerLink="/login" class="ion-float-right">Cerrar Sesión</ion-button>
-    </ion-buttons>
+    <div slot="end">
+      <ion-icon routerLink="/login" name="log-out-outline"></ion-icon>
+    </div>
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
