--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -4,7 +4,7 @@
       Bienvenid@ {{usuarioActivo.username}}!
     </ion-title>
     <div slot="end">
-      <ion-icon routerLink='/' name="log-out-outline" style="margin-right: 25px;"></ion-icon>
+      <ion-icon routerLink="/login" name="log-out-outline" style="margin-right: 25px;"></ion-icon>
     </div>
   </ion-toolbar>
 </ion-header>
