--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,11 +7,29 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="contenedor-imagen">
+    <img src="https://estandarlabs.gruposentte.cl/app-assets/images/fondo-azul.jpg" class="imagen-reducida" alt="Imagen">
+  </div>
+  <ion-card color="warning">
+    <ion-card-header>
+      <ion-card-title>Total de Viajes</ion-card-title>
+      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+    </ion-card-header> 
+  </ion-card>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-card color="light">
+    <ion-card-header>
+      <ion-card-title>Crear viaje</ion-card-title>
+      <ion-card-subtitle>
+        <ion-label position="floating">Destino</ion-label>
+        <ion-input [clearInput]="true" type="text" class="custom-clear-input"></ion-input>
+        <ion-label position="floating">Capacidad:</ion-label>
+        <ion-input [clearInput]="true" type="text" class="custom-clear-input"></ion-input>
+        <ion-label position="floating">Tarifa:</ion-label>
+        <ion-input [clearInput]="true" type="text" class="custom-clear-input"></ion-input>
+      </ion-card-subtitle>             
+    </ion-card-header>
+  </ion-card>
+  <ion-button expand="block" class="blue-button">Crear Viaje</ion-button>
+  <ion-button expand="block" class="yellow-button">Limpiar</ion-button>
 </ion-content>
