--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -32,4 +32,5 @@
   </ion-card>
   <ion-button expand="block" class="blue-button">Crear Viaje</ion-button>
   <ion-button expand="block" class="yellow-button">Limpiar</ion-button>
+  <ion-button expand="block" class="yellow-button">Limpiar</ion-button>
 </ion-content>
