--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -10,7 +10,7 @@
       <ion-title size="large">login</ion-title>
     </ion-toolbar>
   </ion-header>
-
+<div class="formato">
   <form [formGroup]="formularioLogin" (ngSubmit)="intentarLogear()">
     <ion-progress-bar *ngIf="auth.$cargando | async" type="indeterminate"></ion-progress-bar>
     <ion-item>
@@ -23,6 +23,8 @@
     </ion-item>
 
     <ion-button type="submit" expand="block">Entrar</ion-button>
+    <ion-button type="submit" expand="block">Recupera Contraseña</ion-button>
+    <ion-progress-bar *ngIf="auth.$cargando | async" type="indeterminate"></ion-progress-bar>
   </form>
-
+</div>
 </ion-content>
