--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -23,14 +23,14 @@
       <ion-card-title>Crear viaje</ion-card-title>
       <ion-card-subtitle>
         <ion-label position="floating">Destino</ion-label>
-        <ion-input [clearInput]="true" type="text" class="custom-clear-input"></ion-input>
+        <ion-input id="destino" [clearInput]="true" type="text" class="custom-clear-input"></ion-input>
         <ion-label position="floating">Capacidad:</ion-label>
-        <ion-input [clearInput]="true" type="text" class="custom-clear-input"></ion-input>
+        <ion-input id="capacidad" [clearInput]="true" type="text" class="custom-clear-input"></ion-input>
         <ion-label position="floating">Tarifa:</ion-label>
-        <ion-input [clearInput]="true" type="text" class="custom-clear-input"></ion-input>
+        <ion-input id="tarifa" [clearInput]="true" type="text" class="custom-clear-input"></ion-input>
       </ion-card-subtitle>             
-    </ion-card-header>
-  </ion-card>
-  <ion-button (click)="botonClick()">Crear Viaje</ion-button>
-  <ion-button expand="block" class="yellow-button">Limpiar</ion-button>
+      </ion-card-header>
+      </ion-card>
+      <ion-button expand="block" (click)="botonClick()">Crear Viaje</ion-button>
+      <ion-button expand="block" class="yellow-button" (click)="limpiarCampos()">Limpiar</ion-button>
 </ion-content>
