--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -17,3 +17,12 @@
 .tolbar{
   margin-top: 30px;
 }
+
+.titulo-ubicacion{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: bold;
+ 
+
+}
