--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -30,6 +30,6 @@
       </ion-card-subtitle>             
     </ion-card-header>
   </ion-card>
-  <ion-button expand="block" class="blue-button">Crear Viaje</ion-button>
+  <ion-button shape="block">Crear Viaje</ion-button>
   <ion-button expand="block" class="yellow-button">Limpiar</ion-button>
 </ion-content>
