--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>¡Bienvenido a TeLlevoApp! </ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,7 +12,6 @@
   </ion-header>
 
   <form [formGroup]="formularioLogin" (ngSubmit)="intentarLogear()">
-    <ion-progress-bar *ngIf="auth.$cargando | async" type="indeterminate"></ion-progress-bar>
     <ion-item>
       <ion-label position="floating">Ingrese su correo:</ion-label>
       <ion-input [clearInput]="true" type="text" formControlName="usuario"></ion-input>
@@ -21,8 +20,7 @@
       <ion-label position="floating">Ingresa contraseña:</ion-label>
       <ion-input [clearInput]="true" type="password" formControlName="password"></ion-input>
     </ion-item>
-
     <ion-button type="submit" expand="block">Entrar</ion-button>
   </form>
-</div>
+    <a href='/registro'>¿No tienes cuenta? Registrate aquí!</a>
 </ion-content>
