--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-title>Bienvenido! registra tu cuenta.</ion-title>
+      <ion-title>Ingresa tus datos:</ion-title>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <form [formGroup]="formularioRegistro">
+  <form [formGroup]="formularioRegistro" (ngSubmit)="registrar()">
     <ion-list>
       <ion-item>
         <ion-input type="text"  fill="solid" labelPlacement="floating" formControlName="primerNombre">
@@ -20,7 +20,7 @@
         </ion-input>
       </ion-item>
       <ion-item>
-        <ion-input fill="solid" labelPlacement="floating" formControlName="telefono">
+        <ion-input type="text" fill="solid" labelPlacement="floating" formControlName="telefono">
           <div slot="label">Telefono</div>
         </ion-input>
       </ion-item>
@@ -40,7 +40,7 @@
         </ion-input>
       </ion-item>
       <ion-item>
-        <ion-button (click)="registrar()" size="default" type="submit">Registrar cuenta</ion-button>
+        <ion-button size="default" type="submit">Registrar cuenta</ion-button>
       </ion-item>
     </ion-list>
   </form>
