arreglo del logo de duoc

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,7 +8,7 @@
 
 <ion-content [fullscreen]="true">
   <div class="contenedor-imagen">
-    <img src="https://estandarlabs.gruposentte.cl/app-assets/images/fondo-azul.jpg" class="imagen-reducida" alt="Imagen">
+    <img src="./../../assets/img/R.jpg" class="imagen-reducida" alt="Imagen">
   </div>
   <ion-card color="warning">
     <ion-card-header>
