--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 
 <ion-content [fullscreen]="true">
   <div class="contenedor-imagen">
-    <img src="https://estandarlabs.gruposentte.cl/app-assets/images/fondo-azul.jpg" class="imagen-reducida" alt="Imagen">
+    <img src="./../../assets/img/R.jpg" class="imagen-reducida" alt="Imagen">
   </div>
   <ion-toolbar class="tolbar" style="background-color: rgb(86, 14, 255); color: white; text-align: center;">
     <div class="titulo-ubicacion">Tu Ubicacion</div>
