se hace funcional la crendencial mostrando los datos con sessionStorage y se arreglan defectos del diseño

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar >
-    <ion-title >
-      Bienvenido {{sesion}} {{sesion2}}
+    <ion-title slot="start" style="margin-left: -60px; padding-left: -0;" >
+      Bienvenido {{sesion}}
     </ion-title>
     <div slot="end">
       <ion-item (click)="cerrarSesion()">
