--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,5 +6,20 @@
   </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
-
+  <ion-card color="light">
+    <ion-card-content>
+      <ion-card-title>Nombre</ion-card-title>
+      <ion-card-subtitle>
+        {{MostrarUsuario}} {{MostrarSegundoN}}
+      </ion-card-subtitle>    
+      <ion-card-title>Correo</ion-card-title>
+      <ion-card-subtitle>
+        {{MostrarEmail}}
+      </ion-card-subtitle>
+      <ion-card-title>Telefono</ion-card-title>
+      <ion-card-subtitle>
+        {{MostrarTelefono}}
+      </ion-card-subtitle>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
