--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,14 +1,19 @@
 
 <ion-content [fullscreen]="true">
-  <div class="contenedor-imagen">
-    <img src="https://estandarlabs.gruposentte.cl/app-assets/images/fondo-azul.jpg" class="imagen-reducida" alt="Imagen">
-  </div>
+
   <ion-toolbar class="tolbar" style="background-color: rgb(86, 14, 255); color: white; text-align: center;">
     <div class="titulo-ubicacion">Tu Ubicacion</div>
   </ion-toolbar>
-  <div class="contenedor-mapa">
+  <!-- <div class="contenedor-mapa">
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13294.214261782272!2d-70.68116115!3d-33.59093875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2scl!4v1698627467372!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
+  </div> -->
+  <ion-item *ngIf="gps.posicionActual != null">
+    {{ gps.posicionActual | json }}
+
+  </ion-item>
+  <ion-item>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3324.5341019606317!2d-70.58256152430425!3d-33.56547927334415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzPCsDMzJzU1LjciUyA3MMKwMzQnNDguMCJX!5e0!3m2!1ses!2scl!4v1700791934507!5m2!1ses!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </ion-item>
 
 </ion-content>
 
