--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar >
     <ion-title >
-      Bienvenido {{sesion}} {{sesion2}}
+      Bienvenid@ {{sesion}} {{sesion2}}
     </ion-title>
     <div slot="end">
       <ion-item (click)="cerrarSesion()">
